init text component

--- a/apps/web/src/app/app.component.html
+++ b/apps/web/src/app/app.component.html
@@ -1,2 +1,5 @@
-app
-<app-email-button></app-email-button>
+<app-email-button>Button example</app-email-button>
+<app-email-text [style]="{ color: 'blue', fontSize: '16px', fontWeight: 'bold' }" [id]="'text-example'"
+    class="text-example">
+    Text example!
+</app-email-text>
