init img component

--- a/apps/web/src/app/app.component.html
+++ b/apps/web/src/app/app.component.html
@@ -3,3 +3,5 @@
     class="text-example">
     Text example!
 </app-email-text>
+<app-email-img [src]="'https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png'"
+    [alt]="'Google logo'" [width]="272" [height]="92" />
