--- a/apps/web/src/app/app.component.html
+++ b/apps/web/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-email-html>
+    <app-email-head></app-email-head>
     <app-email-button>Button example</app-email-button>
     <app-email-text [style]="{ color: 'blue', fontSize: '16px', fontWeight: 'bold' }" [id]="'text-example'"
         class="text-example">
