--- a/apps/web/src/app/app.component.html
+++ b/apps/web/src/app/app.component.html
@@ -2,15 +2,18 @@
     <app-email-head></app-email-head>
     <app-email-body>
         <app-email-container>
-            <app-email-button>Button example</app-email-button>
-            <app-email-text [style]="{ color: 'blue', fontSize: '16px', fontWeight: 'bold' }" [id]="'text-example'"
-                class="text-example">
-                Text example!
-            </app-email-text>
-            <app-email-img [src]="'https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png'"
-                [alt]="'Google logo'" [width]="272" [height]="92" />
+            <td app-email-column>
+                <app-email-button>Button example</app-email-button>
+                <app-email-text [style]="{ color: 'blue', fontSize: '16px', fontWeight: 'bold' }" [id]="'text-example'"
+                    class="text-example">
+                    Text example!
+                </app-email-text>
+            </td>
+            <td app-email-column>
+                <app-email-img
+                    [src]="'https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png'"
+                    [alt]="'Google logo'" [width]="272" [height]="92" />
+            </td>
         </app-email-container>
-
     </app-email-body>
 </app-email-html>
-tes
